# ergaxiom

./: .editorconfig  .gitignore  Cargo.toml  README.md
crates/attestation-runtime/: Cargo.toml
crates/attestation-runtime/src/: issuer.rs  lib.rs  model.rs  verifier.rs
crates/attestation-runtime/tests/: attestation_runtime.rs
crates/background-cleanup-certified-path-runtime/: Cargo.toml
crates/background-cleanup-certified-path-runtime/src/: certify.rs  compiler.rs  integration.rs  lib.rs  model.rs  planner.rs  png.rs  runtime.rs  signing.rs  util.rs
crates/background-cleanup-certified-path-runtime/tests/: path.rs  real_certificate.rs  signed_evidence.rs
crates/brand-compliant-export-certified-path-runtime/: Cargo.toml
crates/brand-compliant-export-certified-path-runtime/src/: certify.rs  compiler.rs  lib.rs  model.rs  normalization.rs  planner.rs  runtime.rs  signing.rs  svg.rs  util.rs
crates/brand-compliant-export-certified-path-runtime/tests/: path.rs  real_certificate.rs  signed_evidence.rs
crates/capability-runtime/: Cargo.toml
crates/capability-runtime/src/: authorizer.rs  lib.rs  model.rs
crates/capability-runtime/tests/: capability_runtime.rs
crates/desktop-shell-runtime/: Cargo.toml
crates/desktop-shell-runtime/src/: lib.rs
crates/desktop-shell-runtime/tests/: authority.rs
crates/evidence-runtime/: Cargo.toml
crates/evidence-runtime/src/: assessor.rs  lib.rs  model.rs
crates/evidence-runtime/tests/: evidence_runtime.rs
crates/execution-runtime/: Cargo.toml
crates/execution-runtime/src/: lib.rs  model.rs  verifier.rs
crates/execution-runtime/tests/: execution_runtime.rs
crates/graphic-certified-delivery-runtime/: Cargo.toml
crates/graphic-certified-delivery-runtime/src/: lib.rs
crates/graphic-certified-delivery-runtime/tests/: certified_delivery.rs
crates/graphic-designer-twin-runtime/: Cargo.toml
crates/graphic-designer-twin-runtime/src/: lib.rs  model.rs  png.rs  render.rs  runtime.rs  validate.rs
crates/graphic-designer-twin-runtime/tests/: graphic_designer_twin.rs
crates/graphic-final-artifact-verification-runtime/: Cargo.toml
crates/graphic-final-artifact-verification-runtime/src/: lib.rs
crates/graphic-final-artifact-verification-runtime/tests/: final_artifact_binding.rs
crates/graphic-inkscape-certified-delivery-runtime/: Cargo.toml
crates/graphic-inkscape-certified-delivery-runtime/src/: lib.rs
crates/graphic-inkscape-certified-delivery-runtime/tests/: certified_inkscape_delivery.rs
crates/graphic-inkscape-final-certified-delivery-runtime/: Cargo.toml
crates/graphic-inkscape-final-certified-delivery-runtime/src/: lib.rs
crates/graphic-inkscape-final-certified-delivery-runtime/tests/: final_certified_delivery.rs  real_final_certified_delivery.rs
crates/graphic-inkscape-srgb-certified-delivery-runtime/: Cargo.toml
crates/graphic-inkscape-srgb-certified-delivery-runtime/src/: lib.rs  rendered.rs
crates/graphic-inkscape-srgb-certified-delivery-runtime/tests/: certified_srgb_delivery.rs  support.rs
crates/inkscape-adapter-runtime/: Cargo.toml
crates/inkscape-adapter-runtime/src/: lib.rs  operators.rs
crates/inkscape-adapter-runtime/tests/: document_model.rs  proof_bound_operator_attacks.rs  proof_bound_operators.rs  real_inkscape.rs
crates/inkscape-execution-evidence-runtime/: Cargo.toml
crates/inkscape-execution-evidence-runtime/src/: lib.rs
crates/inkscape-execution-evidence-runtime/tests/: signed_material.rs
crates/occupational-twin-runtime/: Cargo.toml
crates/occupational-twin-runtime/src/: lib.rs  model.rs  runtime.rs
crates/occupational-twin-runtime/tests/: occupational_twin.rs
crates/operator-plan-runtime/: Cargo.toml
crates/operator-plan-runtime/src/: compiler.rs  lib.rs  model.rs  trace.rs
crates/operator-plan-runtime/tests/: operator_plan.rs
crates/operator-simulation-runtime/: Cargo.toml
crates/operator-simulation-runtime/src/: lib.rs  model.rs  simulator.rs
crates/operator-simulation-runtime/tests/: operator_simulation.rs
crates/png-artifact-validator-runtime/: Cargo.toml
crates/png-artifact-validator-runtime/src/: lib.rs
crates/png-artifact-validator-runtime/tests/: png_validator.rs  real_inkscape_png.rs
crates/png-logo-geometry-runtime/: Cargo.toml
crates/png-logo-geometry-runtime/src/: lib.rs
crates/png-logo-geometry-runtime/tests/: logo_geometry.rs
crates/png-pixel-decoder-runtime/: Cargo.toml
crates/png-pixel-decoder-runtime/src/: lib.rs
crates/png-pixel-decoder-runtime/tests/: pixel_decoder.rs  real_inkscape_pixels.rs
crates/png-rendered-contrast-runtime/: Cargo.toml
crates/png-rendered-contrast-runtime/src/: lib.rs
crates/png-rendered-contrast-runtime/tests/: real_inkscape_contrast.rs  rendered_contrast.rs
crates/png-rendered-text-bounds-runtime/: Cargo.toml
crates/png-rendered-text-bounds-runtime/src/: lib.rs
crates/png-rendered-text-bounds-runtime/tests/: rendered_text_bounds.rs
crates/png-srgb-normalizer-runtime/: Cargo.toml
crates/png-srgb-normalizer-runtime/src/: evidence.rs  lib.rs
crates/png-srgb-normalizer-runtime/tests/: normalizer.rs  real_inkscape_normalization.rs  signed_evidence.rs
crates/print-ready-poster-preflight-certified-path-runtime/: Cargo.toml
crates/print-ready-poster-preflight-certified-path-runtime/src/: certify.rs  compiler.rs  lib.rs  model.rs  pdf.rs  planner.rs  runtime.rs  signing.rs  svg.rs  util.rs
crates/print-ready-poster-preflight-certified-path-runtime/tests/: path.rs  real_certificate.rs
crates/svg-approved-copy-runtime/: Cargo.toml
crates/svg-approved-copy-runtime/src/: lib.rs
crates/svg-approved-copy-runtime/tests/: approved_copy.rs
crates/typed-planner-runtime/: Cargo.toml
crates/typed-planner-runtime/src/: lib.rs
crates/typed-planner-runtime/tests/: static_social_post_plan.rs
crates/windows-bridge-runtime/: Cargo.toml
crates/windows-bridge-runtime/src/: lib.rs  model.rs  runtime.rs  verifier.rs
crates/windows-bridge-runtime/tests/: windows_bridge.rs  windows_uia_host_process.rs
crates/windows-uia-client-runtime/: Cargo.toml
docs/: roadmap.md  (+3 more)
(+231 files in other folders)
