[workspace]
members = [
  "crates/attestation-runtime",
  "crates/capability-runtime",
  "crates/contract-runtime",
  "crates/evidence-runtime",
  "crates/execution-runtime",
  "crates/graphic-certified-delivery-runtime",
  "crates/graphic-designer-twin-runtime",
  "crates/occupational-twin-runtime",
  "crates/operator-plan-runtime",
  "crates/operator-simulation-runtime",
  "crates/proof-kernel"
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/tayfunates10/ergaxiom"

[workspace.dependencies]
base64 = "0.22"
ed25519-dalek = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
