[workspace]
members = [
  "crates/attestation-runtime",
  "crates/capability-runtime",
  "crates/contract-runtime",
  "crates/evidence-runtime",
  "crates/execution-runtime",
  "crates/graphic-certified-delivery-runtime",
  "crates/graphic-designer-twin-runtime",
  "crates/graphic-final-artifact-verification-runtime",
  "crates/graphic-inkscape-certified-delivery-runtime",
  "crates/graphic-inkscape-srgb-certified-delivery-runtime",
  "crates/inkscape-adapter-runtime",
  "crates/inkscape-execution-evidence-runtime",
  "crates/occupational-twin-runtime",
  "crates/operator-plan-runtime",
  "crates/operator-simulation-runtime",
  "crates/png-artifact-validator-runtime",
  "crates/png-logo-geometry-runtime",
  "crates/png-pixel-decoder-runtime",
  "crates/png-rendered-contrast-runtime",
  "crates/png-rendered-text-bounds-runtime",
  "crates/png-srgb-normalizer-runtime",
  "crates/proof-kernel",
  "crates/svg-approved-copy-runtime",
  "crates/windows-bridge-runtime",
  "crates/windows-uia-client-runtime"
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/tayfunates10/ergaxiom"

[workspace.dependencies]
base64 = "0.22"
ed25519-dalek = "2.1"
flate2 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
