[package]
name = "ergaxiom-capability-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
ergaxiom-contract-runtime = { path = "../contract-runtime" }
ergaxiom-operator-plan-runtime = { path = "../operator-plan-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }

[lints]
workspace = true
