[package]
name = "ergaxiom-graphic-certified-delivery-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64.workspace = true
ergaxiom-attestation-runtime = { path = "../attestation-runtime" }
ergaxiom-capability-runtime = { path = "../capability-runtime" }
ergaxiom-contract-runtime = { path = "../contract-runtime" }
ergaxiom-evidence-runtime = { path = "../evidence-runtime" }
ergaxiom-execution-runtime = { path = "../execution-runtime" }
ergaxiom-graphic-designer-twin-runtime = { path = "../graphic-designer-twin-runtime" }
ergaxiom-occupational-twin-runtime = { path = "../occupational-twin-runtime" }
ergaxiom-operator-plan-runtime = { path = "../operator-plan-runtime" }
ergaxiom-operator-simulation-runtime = { path = "../operator-simulation-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
