[package]
name = "ergaxiom-graphic-designer-twin-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64.workspace = true
ergaxiom-occupational-twin-runtime = { path = "../occupational-twin-runtime" }
ergaxiom-operator-plan-runtime = { path = "../operator-plan-runtime" }
ergaxiom-operator-simulation-runtime = { path = "../operator-simulation-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
