[package]
name = "ergaxiom-graphic-inkscape-certified-delivery-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ed25519-dalek.workspace = true
ergaxiom-attestation-runtime = { path = "../attestation-runtime" }
ergaxiom-evidence-runtime = { path = "../evidence-runtime" }
ergaxiom-graphic-certified-delivery-runtime = { path = "../graphic-certified-delivery-runtime" }
ergaxiom-inkscape-execution-evidence-runtime = { path = "../inkscape-execution-evidence-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
