[package]
name = "ergaxiom-graphic-inkscape-final-certified-delivery-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ed25519-dalek.workspace = true
ergaxiom-attestation-runtime = { path = "../attestation-runtime" }
ergaxiom-contract-runtime = { path = "../contract-runtime" }
ergaxiom-evidence-runtime = { path = "../evidence-runtime" }
ergaxiom-graphic-final-artifact-verification-runtime = { path = "../graphic-final-artifact-verification-runtime" }
ergaxiom-graphic-inkscape-srgb-certified-delivery-runtime = { path = "../graphic-inkscape-srgb-certified-delivery-runtime" }
ergaxiom-operator-plan-runtime = { path = "../operator-plan-runtime" }
ergaxiom-png-logo-geometry-runtime = { path = "../png-logo-geometry-runtime" }
ergaxiom-png-rendered-contrast-runtime = { path = "../png-rendered-contrast-runtime" }
ergaxiom-png-rendered-text-bounds-runtime = { path = "../png-rendered-text-bounds-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
ergaxiom-svg-approved-copy-runtime = { path = "../svg-approved-copy-runtime" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64.workspace = true
ergaxiom-capability-runtime = { path = "../capability-runtime" }
ergaxiom-graphic-certified-delivery-runtime = { path = "../graphic-certified-delivery-runtime" }
ergaxiom-graphic-designer-twin-runtime = { path = "../graphic-designer-twin-runtime" }
ergaxiom-graphic-inkscape-certified-delivery-runtime = { path = "../graphic-inkscape-certified-delivery-runtime" }
ergaxiom-inkscape-adapter-runtime = { path = "../inkscape-adapter-runtime" }
ergaxiom-inkscape-execution-evidence-runtime = { path = "../inkscape-execution-evidence-runtime" }
ergaxiom-occupational-twin-runtime = { path = "../occupational-twin-runtime" }
ergaxiom-png-srgb-normalizer-runtime = { path = "../png-srgb-normalizer-runtime" }

[lints]
workspace = true
