[package]
name = "ergaxiom-inkscape-adapter-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[features]
real-inkscape-tests = []

[dependencies]
base64.workspace = true
ergaxiom-proof-kernel = { path = "../proof-kernel" }
quick-xml = "=0.40.1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
