[package]
name = "ergaxiom-operator-simulation-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ergaxiom-occupational-twin-runtime = { path = "../occupational-twin-runtime" }
ergaxiom-operator-plan-runtime = { path = "../operator-plan-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64.workspace = true
ergaxiom-contract-runtime = { path = "../contract-runtime" }
sha2.workspace = true

[lints]
workspace = true
