[package]
name = "ergaxiom-png-logo-geometry-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ergaxiom-png-pixel-decoder-runtime = { path = "../png-pixel-decoder-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
ergaxiom-png-artifact-validator-runtime = { path = "../png-artifact-validator-runtime" }

[lints]
workspace = true
