[package]
name = "ergaxiom-png-srgb-normalizer-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[features]
real-inkscape-tests = []

[dependencies]
ergaxiom-png-artifact-validator-runtime = { path = "../png-artifact-validator-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
quick-xml = "=0.40.1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
ergaxiom-inkscape-adapter-runtime = { path = "../inkscape-adapter-runtime" }

[lints]
workspace = true
