[package]
name = "ergaxiom-print-ready-poster-preflight-certified-path-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[features]
default = []
real-inkscape-tests = []

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
ergaxiom-attestation-runtime = { path = "../attestation-runtime" }
ergaxiom-contract-runtime = { path = "../contract-runtime" }
ergaxiom-evidence-runtime = { path = "../evidence-runtime" }
ergaxiom-execution-runtime = { path = "../execution-runtime" }
ergaxiom-inkscape-adapter-runtime = { path = "../inkscape-adapter-runtime" }
ergaxiom-operator-plan-runtime = { path = "../operator-plan-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
lopdf = "0.36.0"
quick-xml = "=0.40.1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
ergaxiom-capability-runtime = { path = "../capability-runtime" }

[lints]
workspace = true
