[package]
name = "ergaxiom-svg-approved-copy-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ergaxiom-proof-kernel = { path = "../proof-kernel" }
roxmltree = "0.20"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
