[package]
name = "ergaxiom-typed-planner-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ergaxiom-contract-runtime = { path = "../contract-runtime" }
ergaxiom-operator-plan-runtime = { path = "../operator-plan-runtime" }
ergaxiom-proof-kernel = { path = "../proof-kernel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
ergaxiom-graphic-designer-twin-runtime = { path = "../graphic-designer-twin-runtime" }
ergaxiom-intent-contract-compiler-runtime = { path = "../intent-contract-compiler-runtime" }
sha2.workspace = true

[lints]
workspace = true
