[package]
name = "ergaxiom-windows-uia-client-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ergaxiom-windows-bridge-runtime = { path = "../windows-bridge-runtime" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
